[gd_scene load_steps=48 format=3 uid="uid://d2shs2l8i6syh"]

[ext_resource type="Texture2D" uid="uid://5x5iqne7e8ks" path="res://sprites/casette-tape-Sheet.png" id="1_71a88"]
[ext_resource type="Script" path="res://forest/items/casette.gd" id="1_fgxc6"]
[ext_resource type="FontFile" uid="uid://cykh3afyv4h23" path="res://font/PressStart2P-Regular.ttf" id="3_3p5wo"]
[ext_resource type="Texture2D" uid="uid://sa4wspah1gh0" path="res://sprites/tape.png" id="3_omiu2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3g7ru"]
atlas = ExtResource("1_71a88")
region = Rect2(0, 0, 90, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3x5h"]
atlas = ExtResource("1_71a88")
region = Rect2(0, 50, 90, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_v1530"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g7ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3x5h")
}],
"loop": true,
"name": &"Casette",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_scwyd"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fak0"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki85a"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm30x"]
atlas = ExtResource("3_omiu2")
region = Rect2(57, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tcj4"]
atlas = ExtResource("3_omiu2")
region = Rect2(76, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_neraf"]
atlas = ExtResource("3_omiu2")
region = Rect2(95, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldsy6"]
atlas = ExtResource("3_omiu2")
region = Rect2(114, 0, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_crua0"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wmoj"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cdgg"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhfwv"]
atlas = ExtResource("3_omiu2")
region = Rect2(57, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_034lg"]
atlas = ExtResource("3_omiu2")
region = Rect2(76, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_io83y"]
atlas = ExtResource("3_omiu2")
region = Rect2(95, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_t527a"]
atlas = ExtResource("3_omiu2")
region = Rect2(114, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvxw"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc8s1"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_00x05"]
atlas = ExtResource("3_omiu2")
region = Rect2(57, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_68fkx"]
atlas = ExtResource("3_omiu2")
region = Rect2(76, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpods"]
atlas = ExtResource("3_omiu2")
region = Rect2(95, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_66mgg"]
atlas = ExtResource("3_omiu2")
region = Rect2(114, 22, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_yte1d"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eea7"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_puuhq"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_kucin"]
atlas = ExtResource("3_omiu2")
region = Rect2(57, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu426"]
atlas = ExtResource("3_omiu2")
region = Rect2(76, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qs20"]
atlas = ExtResource("3_omiu2")
region = Rect2(95, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk8qr"]
atlas = ExtResource("3_omiu2")
region = Rect2(114, 33, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjdfv"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_54up3"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruapr"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfprx"]
atlas = ExtResource("3_omiu2")
region = Rect2(57, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_uns36"]
atlas = ExtResource("3_omiu2")
region = Rect2(76, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmgbm"]
atlas = ExtResource("3_omiu2")
region = Rect2(95, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2di"]
atlas = ExtResource("3_omiu2")
region = Rect2(114, 44, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_elok2"]
atlas = ExtResource("3_omiu2")
region = Rect2(0, 55, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_4igiw"]
atlas = ExtResource("3_omiu2")
region = Rect2(19, 55, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4pmx"]
atlas = ExtResource("3_omiu2")
region = Rect2(38, 55, 19, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_vws4x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scwyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fak0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki85a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm30x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tcj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neraf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldsy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crua0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wmoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cdgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhfwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_034lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io83y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t527a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc8s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00x05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68fkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpods")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66mgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yte1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eea7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puuhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kucin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu426")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qs20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk8qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjdfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54up3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruapr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfprx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uns36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmgbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elok2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4igiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4pmx")
}],
"loop": false,
"name": &"Tape",
"speed": 1.0
}]

[sub_resource type="Theme" id="Theme_h5v02"]
default_font = ExtResource("3_3p5wo")
default_font_size = 128

[node name="Casette" type="Node2D"]
script = ExtResource("1_fgxc6")

[node name="CasetteAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v1530")
animation = &"Casette"
frame_progress = 0.0184608
centered = false

[node name="TapeAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(35, 20)
sprite_frames = SubResource("SpriteFrames_vws4x")
animation = &"Tape"
frame_progress = 0.474089
centered = false

[node name="ColorBand" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 34.0
offset_right = 89.0
offset_bottom = 37.0
color = Color(0.796078, 0.858824, 0.988235, 1)

[node name="Label" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 16.0
offset_top = 9.0
offset_right = 1641.0
offset_bottom = 153.0
scale = Vector2(0.04, 0.04)
theme = SubResource("Theme_h5v02")
text = "Mix Tape #7"
